# docling-vault-tool

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANUAL.md  README.en.md  README.md  SECURITY.md  app_streamlit.py  dashboard_launcher.py  docker-compose.yml  docling_worker.py  file_transfer.py  i18n.py  install_and_run.ps1  install_and_run.sh  job_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  service_manager.py  vault_builder.py  vault_index.py
.github/workflows/: ci.yml
.streamlit/: config.toml
deploy/systemd/: doc2vault-watch@.service  docling-vault-watch@.service
deploy/windows/: register_watch_task.ps1
i18n/: __init__.py  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json  ru.json  uk.json  zh-cn.json
scripts/: check_i18n.py
tests/: conftest.py  test_app_streamlit.py  test_batch_runner.py  test_embeddings.py  test_i18n.py  test_jobs.py  test_service_manager.py  test_tagging.py  test_transfer.py  test_vault.py  test_vault_builder.py  test_vault_index.py  test_worker.py  test_xlsx.py
